--- a/index.html
+++ b/index.html
@@ -5607,6 +5607,21 @@ ________        .__      .__                                .___
                 </div>
         </div>
 
+        <!--    //////////////////////////    -->
+        <!--      SECTION 9 — CONCLUSION      -->
+        <!--    //////////////////////////    -->
+        <div class="narrative-section bg dark" style="height: 100vh; padding: var(--spacing);">
+                <div class="section-heading dark" style="top: 50%; transform: translateY(-50%);">
+                        <div class="section-title" id="conclusion">
+                                <h1>Conclusion</h1>
+                        </div>
+                        <div class="section-title">
+                                <h2>The hate words show that context is fundamental to understand what hate speech is and how difficult it is to recognize it and define it. The offensiveness of such terms let us understand the reason why sometimes social networks prefer to <i>censor</i> (or redact) rather than keeping this content on the web.</h2>
+                        </div>
+                </div>
+        </div>
+
+
         <audio controls loop id="mp3" style="display: none">
                 <source src="src/audiello.mp3" type="audio/mpeg" volume="1"></audio>
         </audio>
